feat: add background image opacity, fit modes, and self-reference config
   - Add imageOpacity (0-1) and imageFit (cover, contain, fill, tile) params for OG images
   - Add ALLOW_SELF_REFERENCE config to allow /image to fetch from own /og endpoint
   - Support layered rendering for background images with opacity < 1
   - Update documentation with new parameters and post-processing examples

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ ALLOWED_DOMAINS=             # Comma-separated source image domains (empty = all
                              # Example: example.com,cdn.example.com
 ALLOWED_ORIGINS=             # Comma-separated CORS origins (empty = allow all)
                              # Example: https://example.com,https://app.example.com
+ALLOW_SELF_REFERENCE=false   # Allow /image to fetch from own /og endpoint (for post-processing)
 MAX_IMAGE_SIZE=10485760      # Max image size in bytes (default: 10MB)
 REQUEST_TIMEOUT=30000        # Request timeout in ms (default: 30s)
 
