feat: add multi-process clustering support
- Add src/cluster.ts manager that spawns workers with auto-respawn
- Support CLUSTER_WORKERS env var (0 = auto-detect CPU cores)
- Enable Bun's reusePort for kernel-level load balancing (Linux only)
- Only run cache cleanup on primary worker to avoid duplicate work
- Update Dockerfile to use clustering by default
- Fall back to single process with warning on non-Linux platforms

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "bun --hot src/index.ts",
     "start": "bun src/index.ts",
+    "start:cluster": "bun src/cluster.ts",
     "test": "bun test"
   },
   "devDependencies": {
